# codemap

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
codemap2/: Cargo.toml  README.md
codemap2-diagnostic/: Cargo.toml  README.md
codemap2-diagnostic/examples/: simple.rs
codemap2-diagnostic/src/: emitter.rs  lib.rs  lock.rs
codemap2/src/: file.rs  lib.rs  pos.rs
src/: lib.rs
