[package]
name = "codemap2-diagnostic"
version = "0.1.0"
authors = ["4gboframram", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/4gboframram/codemap"
documentation = "https://docs.rs/codemap2-diagnostic"
description = """
A maintained fork of the `codemap-diagnostic` crate.

Library for displaying compiler error messages, extracted from rustc.
"""
readme = "README.md"
keywords = ["compiler", "error", "warning", "format", "rustc"]
categories = ["command-line-interface"]

[dependencies]
codemap2 = { path = "../codemap2" }
atty = "0.2.11"
termcolor = "1.0.4"

[dev-dependencies]